# CWalecka

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
src/: w2crit.cpp  w2crit.h  wfunctions.cpp  wfunctions.h  wplot.cpp  wplot.h  wsolvers.cpp  wsolvers.h
